--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crynchy Textitify</title>
 
+    <!-- ✅ Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             padding: 40px;
             background: #f5f5f5;
+        }
+
+        h1 {
+            font-family: 'Lobster', cursive;
         }
 
         input, select {
@@ -21,6 +28,7 @@
 
         #outputText {
             font-size: 24px;
+            font-family: 'Roboto', sans-serif;
             font-weight: bold;
             margin-top: 20px;
         }
@@ -79,12 +87,10 @@
             return text;
         }
 
-        // Update on typing
         input.addEventListener("input", () => {
             output.innerText = applyFont(input.value, fontSelect.value);
         });
 
-        // Update on font change
         fontSelect.addEventListener("change", () => {
             output.innerText = applyFont(input.value, fontSelect.value);
         });
